@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.502 2011/10/19 22:14:35 minskim Exp $
+# $NetBSD: Makefile,v 1.503 2011/10/19 22:53:34 minskim Exp $
 #
 
 COMMENT=	Desktop publishing
@@ -22,6 +22,7 @@ SUBDIR+=	bibtool
 SUBDIR+=	bww2tex
 SUBDIR+=	chktex
 SUBDIR+=	cjk-lyx
+SUBDIR+=	cjkutils
 SUBDIR+=	cnprint
 SUBDIR+=	cups
 SUBDIR+=	cups-drivers-Magicolor5440DL
@@ -220,6 +221,8 @@ SUBDIR+=	tex-circle
 SUBDIR+=	tex-circle-doc
 SUBDIR+=	tex-cite
 SUBDIR+=	tex-cite-doc
+SUBDIR+=	tex-cjkutils
+SUBDIR+=	tex-cjkutils-doc
 SUBDIR+=	tex-collection-basic
 SUBDIR+=	tex-collection-basic-doc
 SUBDIR+=	tex-collection-documentation-base-doc
